Resolves: tdf#121200 better ofz#7802 infinite loop fix

Change-Id: I50163d6545782012b177a48a1aded0572499f9af